--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,13 @@
   "ConnectionStrings": {
     "ConnectDB": "Data Source=Trang\\SQLEXPRESS;Initial Catalog=LaptopShop1;Trusted_Connection=true;Encrypt=False;TrustServerCertificate=False;MultipleActiveResultSets=True",
     "dbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LapTopShop;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "tailwindCSS.includeLanguages": {
+    "html": "html",
+    "javascript": "javascript",
+    "css": "css"
+},
+"editor.quickSuggestions": {
+    "strings": true
+}
 }
